--- a/source/Data/css/config.css
+++ b/source/Data/css/config.css
@@ -435,25 +435,6 @@ div.hotkey:hover {
   top: 4px;
 }
 
-.checkBox {
-  position: absolute;
-  right: 40px;
-  width: 200px;
-  height: 40px;
-  margin-top: 10px;
-}
-
-.checkBox li {
-  height: 40px;
-  line-height: 40px;
-  background-color: transparent;
-  display: block;
-  float: left;
-  width: 100px;
-  box-sizing: border-box;
-  text-align: center;
-}
-
 input {
   border-width: 1px;
   border-style: solid;
@@ -490,12 +471,7 @@ legend + input[type=checkbox].select + label {
   margin-top: 60px;
 }
 
-input[type=checkbox].select {
-  position: absolute;
-  left: -9999px;
-}
-
-input[type=checkbox].select + label {
+div.button, input[type=checkbox].select + label {
   border-width: 1px;
   border-style: solid;
   border-color: #E6E6E6;
@@ -509,6 +485,20 @@ input[type=checkbox].select + label {
   text-align: center;
   cursor: pointer;
   background-color: transparent;
+}
+
+div.button:hover, input[type=checkbox].select + label:hover {
+  border-color: #6CF;
+  color: #6CF;
+}
+
+#photoshopPath {
+  font-size: 0.8em;
+}
+
+input[type=checkbox].select {
+  position: absolute;
+  left: -9999px;
 }
 
 input[type=checkbox].select + label + div {
@@ -598,6 +588,14 @@ input[type=checkbox].select:checked + label + div {
   color: #FFF;
 }
 
+fieldset > input[type='checkbox'].switch + label {
+  margin-top: 10px;
+}
+
+fieldset > .hotkey {
+  margin-top: 10px;
+}
+
 input[type='checkbox'].switch {
   position: absolute;
   left: -9999px;
@@ -608,7 +606,7 @@ input[type='checkbox'].switch + label {
   line-height: 40px;
   cursor: pointer;
   position: absolute;
-  right: 0;
+  right: 40px;
   width: 200px;
   padding: 0;
   margin: 0;
@@ -639,23 +637,41 @@ input[type='checkbox'].switch + label::before {
   left: 0;
 }
 
-input[type='checkbox'].switch ~ li:nth-of-type(1) {
+input[type='checkbox'].switch + label > ul {
+  position: absolute;
+  right: 0;
+  width: 200px;
+  height: 40px;
+}
+
+input[type='checkbox'].switch + label > ul li {
+  height: 40px;
+  line-height: 40px;
+  background-color: transparent;
+  display: block;
+  float: left;
+  width: 100px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+input[type='checkbox'].switch + label > ul li:nth-child(1) {
   float: left;
   color: #5E5E5E;
 }
 
-input[type='checkbox'].switch ~ li:nth-of-type(2) {
+input[type='checkbox'].switch + label > ul li:nth-child(2) {
   display: block;
   float: right;
   color: #D7D7D7;
 }
 
-input[type='checkbox'].switch:checked ~ li:nth-of-type(1) {
+input[type='checkbox'].switch:checked + label > ul li:nth-child(1) {
   float: left;
   color: #D7D7D7;
 }
 
-input[type='checkbox'].switch:checked ~ li:nth-of-type(2) {
+input[type='checkbox'].switch:checked + label > ul li:nth-child(2) {
   display: block;
   float: right;
   color: #5E5E5E;
