使用本地 jQuery 库 完善快捷键设置验证 快捷键使用 CSS 控制大小写

--- a/source/Data/css/config.css
+++ b/source/Data/css/config.css
@@ -128,6 +128,7 @@ kbd {
   border-radius: 3px;
   margin: 0 3px 0 3px;
   padding: 1px 5px;
+  text-transform: capitalize;
   cursor: default;
 }
 
